# projectOpenCV

./: CMakeLists.txt  README.md  main.cpp
